# Fyle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
modules/: export.cpp  export.h  import.cpp  import.h  indexer.cpp  indexer.h  module.h  modules.h  search.cpp  search.h  show.cpp  show.h
utils/: FileNode.cpp  FileNode.h  context.h
